[project]
name = "pillar-modiolar-classifier"
version = "1.0.0"
description = "Standalone Napari-based Pillar–Modiolar synapse classifier"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tom Naber" }]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "typer>=0.12",
  # GUI (install when you run the app)
  "napari[all]>=0.5",
  "magicgui>=0.8",
  "qtpy>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
  "ruff>=0.6",
  "black>=24.3",
  "isort>=5.13",
  "pre-commit>=3.7",
]
# Alias to allow `pip install -e .[gui]` as a reminder (same as base deps).
gui = []

[project.scripts]
pmc = "pmc_app.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = false
known_first_party = ["pmc_app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E203", "E501"]

[tool.ruff.exclude]
# Keep bundled resources out of linting
patterns = ["pmc_app/resources/*"]

[tool.mypy]
python_version = "3.11"
packages = ["pmc_app"]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
