[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pillar-modiolar-classifier"
version = "1.4.0"
description = "Standalone Napari-based Pillar–Modiolar synapse classifier"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tom Naber" }]
dependencies = [
  "pandas>=2.3.3",
  "numpy>=2.3.4",
  "typer>=0.20.0",
  "xlrd>=2.0.2",
  "napari[all]>=0.6.6",
  "pyqt5>=5.15.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
]

[project.scripts]
pmc = "pmc_app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pmc_app*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pmc_app = ["resources/*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = false
known_first_party = ["pmc_app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E203", "E501"]

[tool.ruff.exclude]
patterns = ["pmc_app/resources/*"]

[tool.mypy]
python_version = "3.12"
packages = ["pmc_app"]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
